--- a/ApiRest/appsettings.json
+++ b/ApiRest/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection" : "Server=.\\SQLExpress;Database=ConcertDB;Trusted_Connection=true;TrustServerCertificate=true"
+    "Connection" : "Server=.\\SQLExpress;Database=ConcertDB;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
